cmake_minimum_required(VERSION 3.10)
project(DataStructuresAndAlgorithmAnalysisInCpp)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")

#add_subdirectory(Chapter01/Figure01-16)
#add_executable(DataStructuresAndAlgorithmAnalysisInCpp main.cpp)
add_executable(Chapter01Figure01-02 Chapter01/Figure01-02/main.cpp)
add_executable(Chapter01Figure01-03 Chapter01/Figure01-03/main.cpp)
add_executable(Chapter01Figure01-04 Chapter01/Figure01-04/main.cpp)
add_executable(Chapter01Figure01-05 Chapter01/Figure01-05/main.cpp Chapter01/Figure01-05/IntCell.cpp Chapter01/Figure01-05/IntCell.h)
add_executable(Chapter01Figure01-06 Chapter01/Figure01-06/main.cpp Chapter01/Figure01-06/IntCell.cpp Chapter01/Figure01-06/IntCell.h)
add_executable(Chapter01Figure01-07-8-9 Chapter01/Figure01-07-8-9/main.cpp Chapter01/Figure01-07-8-9/IntCell.cpp Chapter01/Figure01-06/IntCell.h)
add_executable(Chapter01Figure01-10 Chapter01/Figure01-10/main.cpp)
add_executable(Chapter01Figure01-11 Chapter01/Figure01-11/main.cpp Chapter01/Figure01-11/IntCell.cpp Chapter01/Figure01-11/IntCell.h)
add_executable(Chapter01Figure01-12 Chapter01/Figure01-12/main.cpp Chapter01/Figure01-12/IntCell.cpp Chapter01/Figure01-12/IntCell.h)
add_executable(Chapter01Figure01-14 Chapter01/Figure01-14/main.cpp)
add_executable(Chapter01Figure01-15 Chapter01/Figure01-15/main.cpp)
add_executable(Chapter01Figure01-16 Chapter01/Figure01-16/main.cpp)
