add_subdirectory(Figure01-02)
add_subdirectory(Figure01-03)
add_subdirectory(Figure01-04)
add_subdirectory(Figure01-05)
add_subdirectory(Figure01-06)
add_subdirectory(Figure01-07-8-9)
add_subdirectory(Figure01-10)
add_subdirectory(Figure01-11)
add_subdirectory(Figure01-12)
add_subdirectory(Figure01-14)
add_subdirectory(Figure01-15)
add_subdirectory(Figure01-16)
add_subdirectory(Exercises)