add_subdirectory(Figure01)
add_subdirectory(Figure02)
add_subdirectory(Figure03)
add_subdirectory(Figure04)
add_subdirectory(Figure05)
add_subdirectory(Figure06)
add_subdirectory(Figure07)
add_subdirectory(Figure08)
add_subdirectory(Figure09)
add_subdirectory(Figure10)
add_subdirectory(Figure11)
add_subdirectory(Figure12)
add_subdirectory(Figure14)
add_subdirectory(Figure15)
add_subdirectory(Figure16)
add_subdirectory(Figure17)
add_executable(Test main.cpp Vector.cpp Vector.h)