add_subdirectory(Exercise01)
add_subdirectory(Exercise02)
add_subdirectory(Exercise03)
add_subdirectory(Exercise04)
add_subdirectory(Exercise05)
add_subdirectory(Exercise06)
add_subdirectory(Exercise07)
add_subdirectory(Exercise08)
add_subdirectory(Exercise09)
add_subdirectory(Exercise10)
add_subdirectory(Exercise11)
add_subdirectory(Exercise12)
add_subdirectory(Exercise13)
add_subdirectory(Exercise14)
add_subdirectory(Exercise15)
add_subdirectory(Exercise16)
